--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="content">
 
       <h1 class="visually-hidden">Дизайн студия «Nerds»</h1>
 
@@ -102,7 +102,9 @@
 
       <section class="contacts">
         <!--<img  class="map" src="img/map.png" width="1440" height="416">-->
-        <div>
+        <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт-Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?l=trf%2Ctrfe&ll=30.319210%2C59.938928&utm_medium=mapframe&utm_source=maps&z=15.8" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пробки в Москве — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CKaSQX38" width="1440" height="416" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+
+        <div class="contacts-item">
           <h2 class="visually-hidden">Контакты</h2>
           <p>NERDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
