--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
       <h1 class="visually-hidden">Дизайн студия «Nerds»</h1>
 
       <section class="privilege">
-        <h2>Долго, дорого, скурпулезно</h2>
-        <p>Математически выверенный дизайн
-         для вашего сайта или мобильного приложения</p>
-        <a href="#">Узнать больше</a>
+        <div class="privilege-items">
+          <h2>Долго, дорого, скурпулезно</h2>
+          <p>Математически выверенный дизайн
+            для вашего сайта или мобильного приложения</p>
+            <a href="#">Узнать больше</a>
+        </div>
         <img src="img/slide1.png" alt="" width="698" height="413">
       </section>
 
@@ -65,11 +67,11 @@
 
         <h2 class="visually-hidden">Преимущества</h2>
         <div class="info">
-          <p>Мы - маленькая, но гордая
+          <p class="info-item-1">Мы - маленькая, но гордая
           дизайн-студия из Краснодара.</p>
-          <p>Исповедуем принципы минимализма и простоты. ставим математический расчет
+          <p class="info-item-2">Исповедуем принципы минимализма и простоты. ставим математический расчет
           превыше креатива. работаем не покладая рук, как роботы.</p>
-          <p>Выполняем заказы на разработку:</p>
+          <p class="info-item-3">Выполняем заказы на разработку:</p>
 
           <ul>
             <li>Веб-сайтов любой сложности</li>
@@ -107,7 +109,7 @@
     <section class="contacts">
 
       <div class="yandex-map">
-      
+
       <!-- !<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт-Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?l=trf%2Ctrfe&ll=30.319210%2C59.938928&utm_medium=mapframe&utm_source=maps&z=15.8" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пробки в Москве — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CKaSQX38" width="1440" height="416" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 
 -->
@@ -133,7 +135,7 @@
 
       <div class="sale">
         <h3>Давайте дружить, это выгодно!</h3>
-        Скидка 10% для друзей из социальных сетей.
+        <p>Скидка 10% для друзей из социальных сетей.<p>
       </div>
     </footer>
     <form class="form-input">
