--- a/catalog.html
+++ b/catalog.html
@@ -10,21 +10,34 @@
   <body>
     <header class="header-top">
       <div class="header-top-container">
-        <a class="logo"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
-        <nav class="menu">
-          <ul class="site-nav">
-            <li><a href="#">Студия</a></li>
-            <li><a href="#">Клиенты</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
-            <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
-          </ul>
-        </nav>
+        <div class="header-top-container-1">
+          <nav class="menu">
+            <div class="menu-item-1">
+              <a class="logo"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
+              <div class="menu-item-1-container">
+                <ul class="site-nav">
+                  <li><a href="#">Студия</a></li>
+                  <li><a href="#">Клиенты</a></li>
+                  <li><a>Магазин</a></li>
+                  <li><a href="#">Контакты</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="menu-item-2">
+              <ul class="basket">
+                <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+
+        <div class="title-shop">
+          <h2>Магазин готовых шаблонов</h2>
+        </div>
       </div>
     </header>
 
-    <main>
-      <h2>Магазин готовых шаблонов</h2>
+    <main class="content">
       <div class="flex-price">
       <form  class="prices" action="#" method="post" oninput="price-item.value=price.value">
         <fieldset class="price">
@@ -69,7 +82,7 @@
       </form>
 
       <section class="gallery-project">
-        <h2>Галерея шаблонов</h2>
+        <h2 class="visually-hidden">Галерея шаблонов</h2>
         <ul>
           <li><a href="#"><img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">арт. 001</a></li>
           <li><a href="#"><img src="img/img-pink.jpg" width="360" height="576" alt="PINK">арт. 002</a></li>
@@ -86,7 +99,7 @@
     <section class="contacts">
 
       <div class="yandex-map">
-      
+
       <!-- !<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт-Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?l=trf%2Ctrfe&ll=30.319210%2C59.938928&utm_medium=mapframe&utm_source=maps&z=15.8" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пробки в Москве — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CKaSQX38" width="1440" height="416" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 
 -->
