--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="menu-item-2">
               <ul class="basket">
-                <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
+                <li><a class="box" href="#"><!--<img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">-->Корзина</a></li>
               </ul>
             </div>
           </nav>
@@ -131,8 +131,8 @@
         <h2 class="visually-hidden">Контакты</h2>
         <p class="bold">Nerds design studio</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
-        <a href="tel:+78122757575">тел. +7(812) 275-75-75</a>
-        <a href="#">Напишите нам</a>
+        <a class="tel" href="tel:+78122757575">тел. +7(812) 275-75-75</a>
+        <a class="message" href="#">Напишите нам</a>
       </div>
       <img class="map-marker" src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8 ">
     </section>
