--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <div class="header-top-container-1">
           <nav class="menu">
             <div class="menu-item-1">
-              <a class="logo"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
+              <a class="logo" href="index.html"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
               <div class="menu-item-1-container">
                 <ul class="site-nav">
                   <li><a href="#">Студия</a></li>
@@ -39,6 +39,7 @@
 
     <main class="content">
       <div class="flex-price">
+        <div class="flex-price-form">
         <form  class="prices" action="#" method="post" oninput="price-item.value=price.value">
           <fieldset class="filter-item">
             <legend>Стоимость:</legend>
@@ -94,6 +95,7 @@
 
           <input type="submit" value="показать">
       </form>
+      </div>
 
       <section class="gallery-project">
         <h2 class="visually-hidden">Галерея шаблонов</h2>
