--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="menu-item-2">
               <ul class="basket">
-                <li><a class="box" href="#"><!--<img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">-->Корзина</a></li>
+                <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
               </ul>
             </div>
           </nav>
