Слайдер и по мелочи
В сладере при добавлении 3-х сдвигателей типа #btn-1:checked ~ .slider-inner .slider-slides {
  transform: translate(0);
исчезают сами переключатели label

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Магазин: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.css/normalize.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -16,16 +16,16 @@
               <a class="logo" href="index.html"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
               <div class="menu-item-1-container">
                 <ul class="site-nav">
-                  <li><a href="#">Студия</a></li>
-                  <li><a href="#">Клиенты</a></li>
-                  <li><a>Магазин</a></li>
-                  <li><a href="#">Контакты</a></li>
+                  <li class="active"><a href="#">Студия</a></li>
+                  <li class="active"><a href="#">Клиенты</a></li>
+                  <li class="active"><a>Магазин</a></li>
+                  <li class="active"><a href="#">Контакты</a></li>
                 </ul>
               </div>
             </div>
             <div class="menu-item-2">
               <ul class="basket">
-                <li><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
+                <li class="active"><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
               </ul>
             </div>
           </nav>
@@ -100,12 +100,60 @@
       <section class="gallery-project">
         <h2 class="visually-hidden">Галерея шаблонов</h2>
         <ul>
-          <li><a href="#"><img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">арт. 001</a></li>
-          <li><a href="#"><img src="img/img-pink.jpg" width="360" height="576" alt="PINK">арт. 002</a></li>
-          <li><a href="#"><img src="img/img-barbershop.jpg" width="360" height="576" alt="BORODINSKI">арт. 003</a></li>
-          <li><a href="#"><img src="img/img-mishka.jpg" width="360" height="576" alt="MISHKA">арт. 004</a></li>
-          <li><a href="#"><img src="img/img-aplus.jpg" width="360" height="576" alt="A+">арт. 005</a></li>
-          <li><a href="#"><img src="img/img-kvast.jpg" width="360" height="576" alt="магазин кваса">арт. 006</a></li>
+          <li class="gallery-project-item">
+            <img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">
+            <span class="visually-hidden">арт. 001</span>
+            <div class="sedona">
+              <h3>Sedona</h3>
+              <p>Информационный сайт для туристов</p>
+              <a class="active-catalog" href="">9 900 руб.</a>
+            </div>
+          </li>
+          <li class="gallery-project-item">
+            <img src="img/img-pink.jpg" width="360" height="576" alt="PINK">
+            <span class="visually-hidden">арт. 002</span>
+            <div class="pink">
+              <h3>Pink</h3>
+              <p>Продуктовый лединг приложения для iOS и Androind</p>
+              <a class="active-catalog" href="">9 900 руб.</a>
+            </div>
+          </li>
+          <li class="gallery-project-item">
+            <img src="img/img-barbershop.jpg" width="360" height="576" alt="BORODINSKI">
+            <span class="visually-hidden">арт. 003</span>
+            <div class="BORODINSKI">
+              <h3>borodinski</h3>
+              <p>Стрижка усов и бороды</p>
+              <a class="active-catalog" href="">9 900 руб.</a>
+            </div>
+          </li>
+          <li class="gallery-project-item">
+            <img src="img/img-mishka.jpg" width="360" height="576" alt="MISHKA">
+            <span class="visually-hidden">арт. 004</span>
+            <div class="MISHKA">
+              <h3>Mishka</h3>
+              <p>Интернет магазин вещей сделанных своими руками</p>
+              <a class="active-catalog" href="">9 900 руб.</a>
+            </div>
+          </li>
+          <li class="gallery-project-item">
+            <img src="img/img-aplus.jpg" width="360" height="576" alt="A+">
+            <span class="visually-hidden">арт. 005</span>
+            <div class="A+">
+              <h3>A+</h3>
+              <p>Образовательный центр</p>
+              <a class="active-catalog" href="">9 900 руб.</a>
+            </div>
+          </li>
+          <li class="gallery-project-item">
+            <img src="img/img-kvast.jpg" width="360" height="576" alt="магазин кваса">
+            <span class="visually-hidden">арт. 006</span>
+            <div class="KWAST">
+              <h3>Кваст</h3>
+              <p>Интернет магазин крафтового кваса</p>
+              <a class="active-catalog" href="">9 900 руб.</a>
+            </div>
+          </li>
         </ul>
       </section>
     </div>
@@ -113,23 +161,21 @@
     </main>
 
     <section class="contacts">
-
       <div class="yandex-map">
 
       <!-- !<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт-Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?l=trf%2Ctrfe&ll=30.319210%2C59.938928&utm_medium=mapframe&utm_source=maps&z=15.8" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пробки в Москве — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CKaSQX38" width="1440" height="416" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-
 -->
+
       </div>
       <div class="contacts-item">
         <h2 class="visually-hidden">Контакты</h2>
-        <p>NERDS DESIGN STUDIO</p>
+        <p class="bold">Nerds design studio</p>
         <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19.8</p>
-        <a href="tel:+78122757575">тел. +7(812) 275-75-75</a>
-        <a href="#">Напишите нам</a>
+        <a class="tel" href="tel:+78122757575">тел. +7(812) 275-75-75</a>
+        <a class="message" href="#">Напишите нам</a>
       </div>
       <img class="map-marker" src="img/map-marker.png" width="231" height="190" alt="Дизайн студия находится по адресу: город Санкт-Петербург, ул. Б. Конюшенная, д. 19.8 ">
     </section>
-
 
     <footer class="footer-main">
 
