--- a/catalog.html
+++ b/catalog.html
@@ -65,32 +65,32 @@
 
           <fieldset class="price">
             <legend>Сетка:</legend>
-            <label for="adaptive-item">Адаптивная</label>
+            <label class="radio" for="adaptive-item">Адаптивная</label>
             <input type="radio" name="grid" id="adaptive-item" value="adaptive">
 
-            <label for="fixed-item">Фиксированная</label>
+            <label class="radio" for="fixed-item">Фиксированная</label>
             <input type="radio" name="grid" id="fixed-item" value="fixed">
 
-            <label for="rubber-item">Резиновая</label>
+            <label class="radio" for="rubber-item">Резиновая</label>
             <input type="radio" name="grid" id="rubber-item" value="rubber">
           </fieldset>
 
           <fieldset class="price">
             <legend>Особенности:</legend>
             <input type="checkbox" name="slider" id="slider-field" checked>
-            <label for="slider-field">Слайдер</label>
+            <label class="checkbox" for="slider-field">Слайдер</label>
 
             <input type="checkbox" name="advantage" id="advantage-field">
-            <label for="advantage-field">Блок преимуществ</label>
+            <label class="checkbox" for="advantage-field">Блок преимуществ</label>
 
             <input type="checkbox" name="news" id="news-field" checked>
-            <label for="news-field">Новости</label>
+            <label class="checkbox" for="news-field">Новости</label>
 
             <input type="checkbox" name="gallery" id="gallery-field">
-            <label for="gallery-field">Галерея</label>
+            <label class="checkbox" for="gallery-field">Галерея</label>
 
             <input type="checkbox" name="basket" id="basket-field">
-            <label for="basket-field">Корзина</label>
+            <label class="checkbox" for="basket-field">Корзина</label>
           </fieldset>
 
           <input type="submit" value="показать">
