--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
               </div>
               <div class="slider-inner">
                 <div class="slider-slides">
-                  <img src="img/slide1.png" alt="фотография с телефонами" width="698px" height="413px">
-                  <img src="img/slide2.jpg" alt="фотография с двумя мониторами" width="663px" height="430px">
-                  <img src="img/slide3.jpg" alt="фотография с монитором и телефоном" width="759px" height="411px">
+                  <img src="img/slide1.png" alt="фотография с телефонами" width="698" height="413">
+                  <img src="img/slide2.jpg" alt="фотография с двумя мониторами" width="663" height="430">
+                  <img src="img/slide3.jpg" alt="фотография с монитором и телефоном" width="759" height="411">
                 </div>
               </div>
             </div>
