--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
                 <ul class="site-nav">
                   <li class="active"><a href="#">Студия</a></li>
                   <li class="active"><a href="#">Клиенты</a></li>
-                  <li class="active"><a>Магазин</a></li>
+                  <li class="active now-catalog"><a>Магазин</a></li>
                   <li class="active"><a href="#">Контакты</a></li>
                 </ul>
               </div>
@@ -101,9 +101,21 @@
         <h2 class="visually-hidden">Галерея шаблонов</h2>
 
         <div class="sort">
+          <h3>Сортировать:</h3>
+          <div class="sort-container">
+            <ul class="sort-item-1">
+              <li class="sort-item-1-active">по цене</li>
+              <li>по типу</li>
+              <li>по названию</li>
+            </ul>
+            <ul class="sort-item-2">
+              <li class="up sort-item-2-active"></li>
+              <li class="down"></li>
+            </ul>
+          </div>
         </div>
 
-        <ul>
+        <ul class="gallery-project-1">
           <li class="gallery-project-item">
             <img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">
             <span class="visually-hidden">арт. 001</span>
